--- a/JavaStudentManagementSystem/StudentManagementSystem/src/loginForm.form
+++ b/JavaStudentManagementSystem/StudentManagementSystem/src/loginForm.form
@@ -97,7 +97,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="f8fac" binding="loginPane" layout-manager="GridLayoutManager" row-count="12" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="f8fac" binding="loginPane" layout-manager="GridLayoutManager" row-count="14" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <card name="Card1"/>
@@ -117,16 +117,6 @@
                       <text value="Login ID: "/>
                     </properties>
                   </component>
-                  <component id="3e78" class="javax.swing.JLabel" binding="lbLogPassword">
-                    <constraints>
-                      <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <font name="Franklin Gothic Medium" size="16" style="1"/>
-                      <foreground color="-1513240"/>
-                      <text value="Password: "/>
-                    </properties>
-                  </component>
                   <component id="c68bf" class="javax.swing.JTextField" binding="tfLogUser">
                     <constraints>
                       <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -140,21 +130,9 @@
                       <margin top="2" left="6" bottom="2" right="6"/>
                     </properties>
                   </component>
-                  <component id="88c9b" class="javax.swing.JPasswordField" binding="pfLogPassword">
-                    <constraints>
-                      <grid row="6" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
-                      </grid>
-                    </constraints>
-                    <properties>
-                      <background color="-5592406"/>
-                      <font name="SansSerif" size="16" style="1"/>
-                      <foreground color="-328966"/>
-                    </properties>
-                  </component>
                   <component id="2d640" class="javax.swing.JButton" binding="btnLogSignIn">
                     <constraints>
-                      <grid row="10" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="12" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-8750470"/>
@@ -165,7 +143,7 @@
                   </component>
                   <component id="be3d0" class="javax.swing.JButton" binding="btnClear">
                     <constraints>
-                      <grid row="10" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="12" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-8750470"/>
@@ -181,13 +159,13 @@
                   </vspacer>
                   <vspacer id="c5de6">
                     <constraints>
-                      <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                      <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
                   <grid id="a57ba" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="0" column="0" row-span="12" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="14" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13355980"/>
@@ -198,7 +176,7 @@
                   <grid id="b4b0e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="0" column="5" row-span="12" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="5" row-span="14" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13355980"/>
@@ -242,7 +220,7 @@
                   <grid id="9a523" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="9" column="1" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="10" column="1" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13355980"/>
@@ -298,6 +276,57 @@
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-13355980"/>
+                    </properties>
+                    <border type="none"/>
+                    <children/>
+                  </grid>
+                  <component id="f6c47" class="javax.swing.JLabel" binding="lbLogPassword">
+                    <constraints>
+                      <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font name="Franklin Gothic Medium" size="16" style="1"/>
+                      <foreground color="-1513240"/>
+                      <text value="Password: "/>
+                    </properties>
+                  </component>
+                  <component id="6fee0" class="javax.swing.JPasswordField" binding="pfLogPassword">
+                    <constraints>
+                      <grid row="6" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="-1"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <background color="-5592406"/>
+                      <font name="SansSerif" size="16" style="1"/>
+                      <foreground color="-328966"/>
+                    </properties>
+                  </component>
+                  <component id="c680d" class="javax.swing.JComboBox" binding="comboBoxUniversity">
+                    <constraints>
+                      <grid row="9" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-6645094"/>
+                    </properties>
+                  </component>
+                  <component id="cad38" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="9" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font name="Franklin Gothic Medium" size="16" style="1"/>
+                      <foreground color="-1513240"/>
+                      <text value="University: "/>
+                    </properties>
+                  </component>
+                  <grid id="68225" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="11" column="1" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13355980"/>
@@ -425,7 +454,7 @@
                   </component>
                   <component id="6400d" class="javax.swing.JTextField" binding="tfMailReg">
                     <constraints>
-                      <grid row="3" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -616,7 +645,17 @@
                     <constraints>
                       <grid row="8" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <background color="-6645094"/>
+                    </properties>
+                  </component>
+                  <component id="14200" class="javax.swing.JComboBox" binding="comboBoxInstructorMail">
+                    <constraints>
+                      <grid row="3" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-6645094"/>
+                    </properties>
                   </component>
                 </children>
               </grid>
