--- a/JavaStudentManagementSystem/StudentManagementSystem/src/loginForm.form
+++ b/JavaStudentManagementSystem/StudentManagementSystem/src/loginForm.form
@@ -336,7 +336,7 @@
                   </grid>
                 </children>
               </grid>
-              <grid id="b3eb5" binding="registerPane" layout-manager="GridLayoutManager" row-count="13" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="b3eb5" binding="registerPane" layout-manager="GridLayoutManager" row-count="13" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="10" left="20" bottom="20" right="10"/>
                 <constraints>
                   <card name="Card2"/>
@@ -425,7 +425,7 @@
                   </component>
                   <component id="ba5a" class="javax.swing.JTextField" binding="tfNameReg">
                     <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="1" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -439,7 +439,7 @@
                   </component>
                   <component id="68d1e" class="javax.swing.JTextField" binding="tfSurnameReg">
                     <constraints>
-                      <grid row="2" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="2" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -467,7 +467,7 @@
                   </component>
                   <component id="76b2b" class="javax.swing.JTextField" binding="tfPhoneReg">
                     <constraints>
-                      <grid row="4" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="4" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -480,7 +480,7 @@
                   </component>
                   <component id="3feec" class="javax.swing.JTextField" binding="tfAddressReg">
                     <constraints>
-                      <grid row="5" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="5" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -493,7 +493,7 @@
                   </component>
                   <component id="418f3" class="javax.swing.JPasswordField" binding="pfCPassword">
                     <constraints>
-                      <grid row="10" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="10" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -506,7 +506,7 @@
                   </component>
                   <component id="804d3" class="javax.swing.JPasswordField" binding="pfPasswordReg">
                     <constraints>
-                      <grid row="9" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="9" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -530,7 +530,7 @@
                   </component>
                   <component id="dbba" class="javax.swing.JButton" binding="clearButton" default-binding="true">
                     <constraints>
-                      <grid row="11" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="11" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-8750470"/>
@@ -541,7 +541,7 @@
                   </component>
                   <component id="8bb5f" class="javax.swing.JLabel" binding="lbMessagePlace">
                     <constraints>
-                      <grid row="12" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="12" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <font name="SansSerif" size="14" style="1"/>
@@ -551,7 +551,7 @@
                   </component>
                   <component id="f8c66" class="javax.swing.JLabel" binding="lbTitleRegister">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <font name="Franklin Gothic Medium" size="48" style="1"/>
@@ -575,7 +575,7 @@
                   <grid id="303c3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
-                      <grid row="0" column="6" row-span="13" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="7" row-span="13" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13355980"/>
@@ -596,7 +596,7 @@
                   </component>
                   <component id="5dcb2" class="javax.swing.JTextField" binding="tfPrefix">
                     <constraints>
-                      <grid row="6" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="6" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -620,7 +620,7 @@
                   </component>
                   <component id="14d2b" class="javax.swing.JTextField" binding="tfOffice">
                     <constraints>
-                      <grid row="7" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                      <grid row="7" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="-1"/>
                       </grid>
                     </constraints>
@@ -643,7 +643,7 @@
                   </component>
                   <component id="8e294" class="javax.swing.JComboBox" binding="comboBoxDepartment">
                     <constraints>
-                      <grid row="8" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="8" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-6645094"/>
@@ -651,10 +651,21 @@
                   </component>
                   <component id="14200" class="javax.swing.JComboBox" binding="comboBoxInstructorMail">
                     <constraints>
-                      <grid row="3" column="3" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="3" row-span="1" col-span="4" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-6645094"/>
+                    </properties>
+                  </component>
+                  <component id="4e375" class="javax.swing.JButton" binding="btnSelectPhoto">
+                    <constraints>
+                      <grid row="11" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-8750470"/>
+                      <font name="SansSerif" size="14" style="1"/>
+                      <foreground color="-1181959"/>
+                      <text value="Select Photo"/>
                     </properties>
                   </component>
                 </children>
